--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>PokemonApp</title>
   <base href="/github-pokemon/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="javascript.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
 </head>
