--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>PokemonApp</title>
-  <base href="./">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="javascript.png">
+  <link rel="icon" type="image/x-icon" href="#">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
 </head>
