--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>PokemonApp</title>
-  <base href="https://jelalisameh.github.io/github-pokemon/index.html">
+  <base href="https://JelaliSameh.github.io/github-pokemon">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="./assets/css/style.css">
-<script src="./assets/js/script.js"></script>
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
 </head>
@@ -16,4 +13,5 @@
   <app-root></app-root>
 </body>
 </html>
+
 
