--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>PokemonApp</title>
-  <base href="https://JelaliSameh.github.io/github-pokemon">
+  <base href="/github-pokemon/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Content-Security-Policy" content="default-src https://cdn.example.net; child-src 'none'; object-src 'none'">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
