--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Security-Policy" content="style-src 'self' https://www.gstatic.com;">
+  <meta http-equiv="Content-Security-Policy" content="style-src 'self' https://www.gstatic.com https://cdnjs.cloudflare.com;">
   <meta charset="utf-8">
   <title>PokemonApp</title>
   <base href="/pokemon/">
