--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,11 @@
 </head>
 <body>
   <app-root></app-root>
+  <!-- Include Angular scripts -->
+  <script src="runtime.js" defer></script>
+  <script src="polyfills.js" defer></script>
+  <script src="styles.js" defer></script>
+  <script src="vendor.js" defer></script>
+  <script src="main.js" defer></script>
 </body>
 </html>
